# beat-func

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  local_server.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  gcloud.yml  test.yml
beatfunc/core/: __init__.py  config.py  exceptions.py  jobs.py
beatfunc/simple/: config.py  main.py  schemas.py
tests/simple/: test_simple_api.py
