[tool.poetry]
name = "beat-func"
version = "0.1.0"
description = "Backend for beat-webapp"
authors = ["branchpanic <hi@branchpanic.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "beatfunc"}]

[tool.poetry.dependencies]
python = "^3.10"
beatmachine = {git = "https://github.com/beat-machine/beat-machine.git", rev = "e0e45bb7172f80ac51facf65cad05e51f20de6a6"}
yt-dlp = "^2022.10.4"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"
packaging = "^21.3"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
requests = "^2.28.1"
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[tool.poetry.extras]
simple = ["fastapi", "python-multipart", "uvicorn"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:madmom"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
