[tool.poetry]
name = "beat-func"
version = "0.2.0"
description = "Backend for beat-webapp"
authors = ["branchpanic <hi@branchpanic.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "beatfunc"}]

[tool.poetry.dependencies]
python = "^3.12"
beatmachine = {git = "https://github.com/beat-machine/beat-machine.git"}
yt-dlp = "*"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"
packaging = "^24.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
requests = "^2.32.3"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
httpx = "^0.28.0"

[tool.poetry.extras]
simple = ["fastapi", "python-multipart", "uvicorn"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:madmom"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
